Add packed ptr. Fixup small bugs here and there

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ elseif(${c_lang} GREATER -1)
   set(STD "c11")
   set(LANG_FLAGS "")
   # Pedantic C11, c++11 has too any unfortunate features
-  set(LANG_FLAGS "-Wstrict-prototypes" "-Wmissing-prototypes" "-Wdeclaration-after-statement" "-Wstrict-aliasing=1")
+  set(LANG_FLAGS "-Wstrict-prototypes" "-Wmissing-prototypes" "-Wdeclaration-after-statement" "-Wstrict-aliasing=1"  "-Wno-duplicate-decl-specifier")
 else()
   message(FATAL_ERROR "Invalid language selection: ${LANG}")
 endif()
@@ -78,14 +78,13 @@ list(FIND gnu_compilers ${COMPILER_LOWER} gnu_compilers)
 if(${llvm_compilers} GREATER -1)
   set(CMAKE_C_COMPILER "/usr/bin/clang")
   set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
-  list(APPEND compiler_flags_extra "-fbracket-depth=1024" "-fmacro-backtrace-limit=0" "-Wimplicit" "-Weverything" "-Wno-gnu-flexible-array-initializer" "-Wno-gnu-statement-expression" "-Wno-disabled-macro-expansion" "-Wno-gnu-zero-variadic-macro-arguments" "-Wno-extra-semi-stmt" "-Wno-cast-align" "-Wno-missing-variable-declarations" "-Wno-extra-semi" "-Wno-padded" "-Wno-float-equal" "-Wno-covered-switch-default"  "-Wno-format-nonliteral" "-Wno-vla" "-Wno-unused-macros" "-Wno-duplicate-decl-specifier" "-Wno-double-promotion" "-Wno-unreachable-code-break" "-Wno-gnu-empty-initializer")
+  list(APPEND compiler_flags_extra "-fbracket-depth=1024" "-fmacro-backtrace-limit=0" "-Wimplicit" "-Weverything" "-Wno-gnu-flexible-array-initializer" "-Wno-gnu-statement-expression" "-Wno-disabled-macro-expansion" "-Wno-gnu-zero-variadic-macro-arguments" "-Wno-extra-semi-stmt" "-Wno-cast-align" "-Wno-missing-variable-declarations" "-Wno-extra-semi" "-Wno-padded" "-Wno-float-equal" "-Wno-covered-switch-default"  "-Wno-format-nonliteral" "-Wno-vla" "-Wno-unused-macros" "-Wno-duplicate-decl-specifier" "-Wno-double-promotion" "-Wno-unreachable-code-break" "-Wno-gnu-empty-initializer" "-Wno-zero-length-array")
   if(${cxx_lang} GREATER -1)
     # Clang warns on each file which is a bit annoying. This may hide
     # real issues.
     list(APPEND compiler_flags_extra "-Wno-c++98-compat-pedantic" "-Wno-anon-enum-enum-conversion" "-Wno-c99-extensions" "-Wno-variadic-macros" "-Wno-deprecated" "-Wno-old-style-cast" "-Wno-zero-as-null-pointer-constant")
     #  else()
     #    list(APPEND compiler_flags_extra "-Wpedantic")
-
   endif()
 elseif(${gnu_compilers} GREATER -1)
   set(CMAKE_C_COMPILER "/usr/bin/gcc")
